fixed overlapping text

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,7 +101,7 @@
 
 .notselected {
 	display:inline-block;
-	width:8%;
+	width:9.5%;
 	text-align:center;
 }
 
@@ -138,7 +138,7 @@
 }
 
 .category {
-	width:20%;
+	width:28%;
 	display:inline-block;
 }
 #bleedingcontainer{
